2022-05-04  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Using netcat to check connections

2022-04-28  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Using --script +ssl-enum-ciphers for older versions of nmap

2022-04-26  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Updating the timeout when using the timeout option of 'ocsp'

2022-04-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Better error message in case of OCSP problems

2022-04-13  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Allows to run with the --init-host-cache option only
        * check_ssl_cert.completion (_check_ssl_cert): check if the host cache exists
        * check_ssl_cert (main): Added a cache for checked hosts (to be used with bash completion)
        * check_ssl_cert (usage): Fixed the capitalization of the help messages
        * check_ssl_cert (usage): Usage errors should trigger an unknown status

2022-04-06  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (testIPv6): Corrected the IPv6 tests

        * check_ssl_cert (check_attr): Timeout support for SSL Labs
        * check_ssl_cert (check_attr): Adding a missing -6 option (if specified) to nmap

2022-03-22  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): fixes debugging output on STDERR

2022-03-21  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): added missing proxy options for curl and s_client

2022-03-15  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: status UKNOWN only for plugin-internal problems (see https://nagios-plugins.org/doc/guidelines.html#AEN78)

2022-03-14  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (fetch_certificate): Add the protocol (if defined) to the critical message

2022-03-11  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): Display all the unmatched common names
